--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,10 +8,13 @@
 
 #root {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    font-family: 'Playfair Display', serif;
 }
 
 .App {
     width: 800px;
+    display: flex;
+    flex-direction: column;
 }
